--- a/src/app/probleme/probleme.component.html
+++ b/src/app/probleme/probleme.component.html
@@ -47,14 +47,233 @@
                 </small>
               </span>
 
-              <span *ngIf="problemeForm.get('prenom').errors['minlength']">
-                  <small class="text-muted">
-                    Veuillez entrer plus de caractères.
-                  </small>
+              <span
+                *ngIf="
+                  problemeForm.get('prenom').errors['nbreCaracteresInsuffisant']
+                "
+              >
+                <small class="text-muted">
+                  Veuillez entrer plus de caractères.
+                </small>
               </span>
             </span>
-            
           </div>
+
+          <div class="form-group row">
+            <label for="nomId" class="col-md-2 col-form-label text-right"
+              >Nom :</label
+            >
+            <div class="col-md-10">
+              <input
+                class="form-control"
+                id="nomId"
+                type="text"
+                placeholder="Votre nom ici (obligatoire)"
+                formControlName="nom"
+                [ngClass]="{
+                  'is-valid':
+                    (problemeForm.get('nom').touched ||
+                      problemeForm.get('nom').dirty) &&
+                    problemeForm.get('nom').valid,
+                  'is-invalid':
+                    (problemeForm.get('nom').touched ||
+                      problemeForm.get('nom').dirty) &&
+                    !problemeForm.get('nom').valid
+                }"
+              />
+            </div>
+
+            <span
+              class="form-text"
+              *ngIf="
+                (problemeForm.get('nom').touched ||
+                  problemeForm.get('nom').dirty) &&
+                problemeForm.get('nom').errors
+              "
+            >
+              <span *ngIf="problemeForm.get('nom').errors['required']">
+                <small class="text-muted"> Merci de saisir votre nom. </small>
+              </span>
+
+              <span *ngIf="problemeForm.get('nom').errors['maxlength']">
+                <small class="text-muted">
+                  Veuillez entrer moins de caractères.
+                </small>
+              </span>
+            </span>
+          </div>
+
+          <div class="form-group row">
+            <label
+              for="typesproblemeId"
+              class="col-md-2 col-form-label text-right"
+              >Type de problème :</label
+            >
+            <div class="col-md-10">
+              <select
+                class="form-control"
+                id="typesproblemeId"
+                formControlName="typesprobleme"
+                [ngClass]="{
+                  'is-valid':
+                    (problemeForm.get('typesprobleme').touched ||
+                      problemeForm.get('typesprobleme').dirty) &&
+                    problemeForm.get('typesprobleme').valid,
+                  'is-invalid':
+                    (problemeForm.get('typesprobleme').touched ||
+                      problemeForm.get('typesprobleme').dirty) &&
+                    !problemeForm.get('typesprobleme').valid
+                }"
+              >
+                <option value="">
+                  Sélectionner un type de problème (obligatoire) ...
+                </option>
+                <option *ngFor="let prob of typesProbleme" [value]="prob.id">{{prob.descriptionTypeProbleme}}</option>
+              </select>
+
+              <span
+                class="form-text"
+                *ngIf="
+                  (problemeForm.get('typesprobleme').touched ||
+                    problemeForm.get('typesprobleme').dirty) &&
+                  problemeForm.get('typesprobleme').errors
+                "
+              >
+                <span
+                  *ngIf="problemeForm.get('typesprobleme').errors['required']"
+                >
+                  <small class="text-muted">
+                    Merci de sélectionner un type de problème.
+                  </small>
+                </span>
+              </span>
+            </div>
+          </div>
+
+
+          <!-- <div class="form-group row">
+            <label for="courrielId" class="col-md-2 col-form-label text-right"
+              >Courriel :</label
+            >
+            <div class="col-md-10">
+              <input
+                class="form-control"
+                id="courrielId"
+                type="text"
+                placeholder="Votre courriel ici (obligatoire)"
+                formControlName="courriel"
+                [ngClass]="{
+                  'is-valid':
+                    (problemeForm.get('courriel').touched ||
+                      problemeForm.get('courriel').dirty) &&
+                    problemeForm.get('courriel').valid,
+                  'is-invalid':
+                    (problemeForm.get('courriel').touched ||
+                      problemeForm.get('courriel').dirty) &&
+                    !problemeForm.get('courriel').valid
+                }"
+              />
+            </div>
+
+            <span
+              class="form-text"
+              *ngIf="
+                (problemeForm.get('courriel').touched ||
+                  problemeForm.get('courriel').dirty) &&
+                problemeForm.get('courriel').errors
+              "
+            >
+              <span *ngIf="problemeForm.get('courriel').errors['required']">
+                <small class="text-muted">
+                  Merci de saisir votre courriel.
+                </small>
+              </span>
+            </span>
+          </div>
+
+
+          <div class="form-group row">
+            <label for="courrielConfirmation" class="col-md-2 col-form-label text-right"
+              >Courriel de confirmation :</label
+            >
+            <div class="col-md-10">
+              <input
+                class="form-control"
+                id="courrielConfirmation"
+                type="text"
+                placeholder="Votre courriel de confirmation ici (obligatoire)"
+                formControlName="courrielConfirmation"
+                [ngClass]="{
+                  'is-valid':
+                    (problemeForm.get('courrielConfirmation').touched ||
+                      problemeForm.get('courrielConfirmation').dirty) &&
+                    problemeForm.get('courrielConfirmation').valid,
+                  'is-invalid':
+                    (problemeForm.get('courrielConfirmation').touched ||
+                      problemeForm.get('courrielConfirmation').dirty) &&
+                    !problemeForm.get('courrielConfirmation').valid
+                }"
+              />
+            </div>
+
+            <span
+              class="form-text"
+              *ngIf="
+                (problemeForm.get('courrielConfirmation').touched ||
+                  problemeForm.get('courrielConfirmation').dirty) &&
+                problemeForm.get('courrielConfirmation').errors
+              "
+            >
+              <span *ngIf="problemeForm.get('courrielConfirmation').errors['required']">
+                <small class="text-muted">
+                  Merci de saisir votre courriel de confirmation.
+                </small>
+              </span>
+            </span>
+          </div>
+
+
+          <div class="form-group row">
+            <label for="telephoneId" class="col-md-2 col-form-label text-right"
+              >Téléphone :</label
+            >
+            <div class="col-md-10">
+              <input
+                class="form-control"
+                id="telephoneId"
+                type="text"
+                placeholder="Votre numéro de téléphone ici (obligatoire)"
+                formControlName="telephone"
+                [ngClass]="{
+                  'is-valid':
+                    (problemeForm.get('telephone').touched ||
+                      problemeForm.get('telephone').dirty) &&
+                    problemeForm.get('telephone').valid,
+                  'is-invalid':
+                    (problemeForm.get('telephone').touched ||
+                      problemeForm.get('telephone').dirty) &&
+                    !problemeForm.get('telephone').valid
+                }"
+              />
+            </div>
+
+            <span
+              class="form-text"
+              *ngIf="
+                (problemeForm.get('telephone').touched ||
+                  problemeForm.get('telephone').dirty) &&
+                problemeForm.get('telephone').errors
+              "
+            >
+              <span *ngIf="problemeForm.get('telephone').errors['required']">
+                <small class="text-muted">
+                  Merci de saisir votre numéro de téléphone.
+                </small>
+              </span>
+            </span>
+
+
+          </div> -->
         </form>
       </div>
     </div>
