--- a/src/app/probleme/probleme.component.html
+++ b/src/app/probleme/probleme.component.html
@@ -128,7 +128,9 @@
                 <option value="">
                   Sélectionner un type de problème (obligatoire) ...
                 </option>
-                <option *ngFor="let prob of typesProbleme" [value]="prob.id">{{prob.descriptionTypeProbleme}}</option>
+                <option *ngFor="let prob of typesProbleme" [value]="prob.id">
+                  {{ prob.descriptionTypeProbleme }}
+                </option>
               </select>
 
               <span
@@ -150,99 +152,54 @@
             </div>
           </div>
 
-
-          <!-- <div class="form-group row">
-            <label for="courrielId" class="col-md-2 col-form-label text-right"
-              >Courriel :</label
-            >
-            <div class="col-md-10">
-              <input
-                class="form-control"
-                id="courrielId"
-                type="text"
-                placeholder="Votre courriel ici (obligatoire)"
-                formControlName="courriel"
-                [ngClass]="{
-                  'is-valid':
-                    (problemeForm.get('courriel').touched ||
-                      problemeForm.get('courriel').dirty) &&
-                    problemeForm.get('courriel').valid,
-                  'is-invalid':
-                    (problemeForm.get('courriel').touched ||
-                      problemeForm.get('courriel').dirty) &&
-                    !problemeForm.get('courriel').valid
-                }"
-              />
-            </div>
-
-            <span
-              class="form-text"
-              *ngIf="
-                (problemeForm.get('courriel').touched ||
-                  problemeForm.get('courriel').dirty) &&
-                problemeForm.get('courriel').errors
-              "
-            >
-              <span *ngIf="problemeForm.get('courriel').errors['required']">
-                <small class="text-muted">
-                  Merci de saisir votre courriel.
-                </small>
-              </span>
-            </span>
-          </div>
-
-
+          <!-- Bouton radio -->
           <div class="form-group row">
-            <label for="courrielConfirmation" class="col-md-2 col-form-label text-right"
-              >Courriel de confirmation :</label
+            <div class="col-md-2"></div>
+            <label for="NotificationId" class="col-md-10 col-form-label"
+              >Notifiez-moi pour le statut de ma demande :</label
             >
+            <div class="col-md-2"></div>
             <div class="col-md-10">
-              <input
-                class="form-control"
-                id="courrielConfirmation"
-                type="text"
-                placeholder="Votre courriel de confirmation ici (obligatoire)"
-                formControlName="courrielConfirmation"
-                [ngClass]="{
-                  'is-valid':
-                    (problemeForm.get('courrielConfirmation').touched ||
-                      problemeForm.get('courrielConfirmation').dirty) &&
-                    problemeForm.get('courrielConfirmation').valid,
-                  'is-invalid':
-                    (problemeForm.get('courrielConfirmation').touched ||
-                      problemeForm.get('courrielConfirmation').dirty) &&
-                    !problemeForm.get('courrielConfirmation').valid
-                }"
-              />
+              <label class="radio-inline">
+                <input
+                  type="radio"
+                  value="PasNotifier"
+                  id="NotificationId"
+                  formControlName="notification"
+                />&nbsp;Ne pas me notifier
+              </label>
+              &nbsp;&nbsp;&nbsp;
+              <label class="radio-inline">
+                <input
+                  type="radio"
+                  value="ParCourriel"
+                  id="NotificationId"
+                  formControlName="notification"
+                />&nbsp;Par courriel
+              </label>
+              &nbsp;&nbsp;&nbsp;
+              <label class="radio-inline">
+                <input
+                  type="radio"
+                  value="ParTelephone"
+                  id="NotificationId"
+                  formControlName="notification"
+                />&nbsp;Par message texte
+              </label>
             </div>
-
-            <span
-              class="form-text"
-              *ngIf="
-                (problemeForm.get('courrielConfirmation').touched ||
-                  problemeForm.get('courrielConfirmation').dirty) &&
-                problemeForm.get('courrielConfirmation').errors
-              "
-            >
-              <span *ngIf="problemeForm.get('courrielConfirmation').errors['required']">
-                <small class="text-muted">
-                  Merci de saisir votre courriel de confirmation.
-                </small>
-              </span>
-            </span>
           </div>
 
-
+          <!-- Zone de texte TÉLÉPHONE (SMS) -->
           <div class="form-group row">
             <label for="telephoneId" class="col-md-2 col-form-label text-right"
-              >Téléphone :</label
+              >Téléphone (SMS) :</label
             >
             <div class="col-md-10">
               <input
                 class="form-control"
                 id="telephoneId"
                 type="text"
-                placeholder="Votre numéro de téléphone ici (obligatoire)"
+                placeholder="Entrez 10 chiffres seulement.  Par exemple 5141118888"
                 formControlName="telephone"
                 [ngClass]="{
                   'is-valid':
@@ -255,25 +212,169 @@
                     !problemeForm.get('telephone').valid
                 }"
               />
-            </div>
 
-            <span
-              class="form-text"
-              *ngIf="
-                (problemeForm.get('telephone').touched ||
-                  problemeForm.get('telephone').dirty) &&
-                problemeForm.get('telephone').errors
-              "
-            >
-              <span *ngIf="problemeForm.get('telephone').errors['required']">
-                <small class="text-muted">
-                  Merci de saisir votre numéro de téléphone.
-                </small>
+              <span
+                class="form-text"
+                *ngIf="
+                  (problemeForm.get('telephone').touched ||
+                    problemeForm.get('telephone').dirty) &&
+                  (problemeForm.get('telephone').errors ||
+                    problemeForm.get('telephone').errors)
+                "
+              >
+                <span
+                  *ngIf="problemeForm.get('telephone').errors?.['required']"
+                >
+                  <small class="text-muted">
+                    Merci de saisir votre numéro de téléphone.
+                  </small>
+                </span>
+                <span
+                  *ngIf="problemeForm.get('telephone').errors?.['minlength']"
+                >
+                  <small class="text-muted">
+                    Veuillez entrer plus de caractères.
+                  </small>
+                </span>
+                <span
+                  *ngIf="problemeForm.get('telephone').errors?.['maxlength']"
+                >
+                  <small class="text-muted">
+                    Veuillez entrer moins de caractères.
+                  </small>
+                </span>
+                <span *ngIf="problemeForm.get('telephone').errors?.['pattern']">
+                  <small class="text-muted">
+                    Merci d'entrer seulement des chiffres.
+                  </small>
+                </span>
               </span>
-            </span>
+            </div>
+          </div>
 
+          <!-- Zone de texte COURRIEL -->
+          <div class="form-group row">
+            <label for="courrielId" class="col-md-2 col-form-label text-right"
+              >Adresse courriel :</label
+            >
+            <!-- Indiquer le formGroupName pour avoir accès à formControlName -->
+            <div class="col-md-10" formGroupName="courrielGroup">
+              <input
+                class="form-control"
+                id="courrielId"
+                type="email"
+                placeholder="Courriel (obligatoire si notification par courriel)"
+                formControlName="courriel"
+                [ngClass]="{
+                  'is-valid':
+                    (problemeForm.get('courrielGroup.courriel').touched ||
+                      problemeForm.get('courrielGroup.courriel').dirty) &&
+                    problemeForm.get('courrielGroup.courriel').valid,
+                  'is-invalid':
+                    (problemeForm.get('courrielGroup.courriel').touched ||
+                      problemeForm.get('courrielGroup.courriel').dirty) &&
+                    !problemeForm.get('courrielGroup.courriel').valid
+                }"
+              />
 
-          </div> -->
+              <span
+                class="form-text"
+                *ngIf="
+                  (problemeForm.get('courrielGroup.courriel').touched ||
+                    problemeForm.get('courrielGroup.courriel').dirty) &&
+                  (problemeForm.get('courrielGroup.courriel').errors ||
+                    problemeForm.get('courrielGroup').errors)
+                "
+              >
+                <span
+                  *ngIf="
+                    problemeForm.get('courrielGroup.courriel').errors?.['required']
+                  "
+                >
+                  <small class="text-muted">
+                    Merci d'entrer votre adresse électronique.
+                  </small>
+                </span>
+                <span
+                  *ngIf="
+                    problemeForm.get('courrielGroup.courriel').errors?.['pattern']
+                  "
+                >
+                  <small class="text-muted">
+                    S.V.P. entrer les informations dans un format valide.
+                  </small>
+                </span>
+              </span>
+            </div>
+          </div>
+
+          <!-- Zone de texte COURRIEL CONFIRMATION -->
+          <div class="form-group row">
+            <label
+              for="courrielConfirmationId"
+              class="col-md-2 col-form-label text-right"
+              >Confirmer courriel :</label
+            >
+            <!-- Indiquer le formGroupName pour avoir accès à formControlName -->
+            <div class="col-md-10" formGroupName="courrielGroup">
+              <input
+                class="form-control"
+                id="courrielConfirmationId"
+                type="email"
+                placeholder="Entrez à nouveau le courriel (obligatoire si notification par courriel)"
+                formControlName="courrielConfirmation"
+                [ngClass]="{
+                  'is-valid':
+                    (problemeForm.get('courrielGroup.courrielConfirmation')
+                      .touched ||
+                      problemeForm.get('courrielGroup.courrielConfirmation')
+                        .dirty) &&
+                    problemeForm.get('courrielGroup.courrielConfirmation')
+                      .valid,
+                  'is-invalid':
+                    ((problemeForm.get('courrielGroup.courrielConfirmation')
+                      .touched ||
+                      problemeForm.get('courrielGroup.courrielConfirmation')
+                        .dirty) &&
+                      !problemeForm.get('courrielGroup.courrielConfirmation')
+                        .valid) ||
+                    problemeForm.get('courrielGroup').errors?.['match']==false
+                }"
+              />
+
+              <span
+                class="form-text"
+                *ngIf="
+                  (problemeForm.get('courrielGroup.courrielConfirmation')
+                    .touched ||
+                    problemeForm.get('courrielGroup.courrielConfirmation')
+                      .dirty) &&
+                  (problemeForm.get('courrielGroup.courrielConfirmation')
+                    .errors ||
+                    problemeForm.get('courrielGroup').errors)
+                "
+              >
+                <span
+                  *ngIf="
+                    problemeForm.get('courrielGroup.courrielConfirmation')
+                      .errors?.['required']
+                  "
+                >
+                  <small class="text-muted">
+                    Confirmez votre adresse courriel (la réécrire)
+                  </small>
+                </span>
+                <span
+                  *ngIf="problemeForm.get('courrielGroup').errors?.['match']==false"
+                >
+                  <small class="text-muted">
+                    Le courriel de confirmation n'est pas le même que le
+                    courriel. Le corriger.
+                  </small>
+                </span>
+              </span>
+            </div>
+          </div>
         </form>
       </div>
     </div>
